# rms24-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KANBAN.md  README.md  RELEASE_NOTES.md
benches/: hint_gen.rs
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  DEPLOYMENT.md  FEATURE_FLAGS.md
docs/diagrams/: rms24-hint-generation.puml  rms24-query-architecture.puml
docs/plans/: 2026-01-29-rms24-online-core-implementation.md  2026-01-30-online-protocol-design.md  2026-01-30-online-protocol-implementation.md  2026-01-30-rms24-keywordpir-benchmark-implementation.md  2026-01-30-rms24-keywordpir-full-benchmark-design.md  2026-01-30-schema40-v3-codestore-implementation.md  2026-01-31-coverage-index-design.md  2026-01-31-coverage-index-implementation.md  2026-01-31-rms24-client-state-cache-design.md  2026-01-31-rms24-keywordpir-benchmark-implementation.md  2026-02-01-rms24-batching-design.md  2026-02-01-rms24-batching-implementation.md  2026-02-02-coderabbit-review-fixes.md  (+5 more)
python/: benchmark_kernels.py  forge_v2.py  modal_benchmark.py  test_kernel_correctness.py
scripts/: bench_hsiao.sh  clear_state_cache.sh  commit-msg-hook.sh  install-hooks.sh  modal_distributed.py  modal_forge_bench.py  modal_forge_gpu_subset.py
src/: bench_framing.rs  bench_handler.rs  bench_proto.rs  bench_timing.rs  client.rs  cost.rs  gpu.rs  hints.rs  lib.rs  messages.rs  online.rs  online_client.rs  online_framing.rs  online_server.rs  online_transport.rs  params.rs  prf.rs  schema40.rs  server.rs  updates.rs
tests/: bench_timing_test.rs  hint_gen_test.rs  online_slice_test.rs
(+3 files in other folders)
