[package]
name = "rms24"
version = "0.1.0"
edition = "2021"
description = "RMS24 single-server PIR with CUDA acceleration"
license = "MIT"

[features]
default = []
cuda = ["cudarc", "bytemuck"]

[dependencies]
chacha20 = "0.9"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
sha3 = "0.10"
log = "0.4"
env_logger = "0.11"

# Optional CUDA deps
cudarc = { version = "0.12", optional = true, features = ["cuda-12040"] }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hint_gen"
harness = false

[[bin]]
name = "bench_gpu_hints"
required-features = ["cuda"]

[[bin]]
name = "generate_subsets"

[[bin]]
name = "run_gpu_kernel"
required-features = ["cuda"]

[[bin]]
name = "rms24_cost"
